fix extra margin problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,10 +84,12 @@ button {
 }
 
 body {
+  width: 100%;
   margin: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: 100dvh;
   &.modal-open {
     overflow-y: hidden;
   }
@@ -109,7 +111,8 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
+  max-width: 100%;
 
   .card-view {
     width: 980px;
@@ -117,13 +120,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-sizing: border-box;
 
     @media (max-width: 980px) {
       width: 500px;
     }
 
     @media (max-width: 500px) {
-      width: 100vw;
+      width: 100%;
+      padding-inline: 0.5rem;
     }
 
     .card-group {
@@ -163,8 +168,10 @@ body {
 
         @media (max-width: 980px) {
           box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.2);
-          margin: 0.5rem;
+          margin: 0.5rem 0;
           width: inherit;
+          width: 100%;
+          box-sizing: border-box;
 
           opacity: 0;
           &.lazy-active {
@@ -186,11 +193,12 @@ body {
       position: relative;
       background-color: var(--light-color);
       box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.2);
-      margin: 0.5rem;
+      margin: 0.5rem 0;
       opacity: 0;
-      margin: 0.5rem;
       padding: 1rem;
       opacity: 0;
+      width: 100%;
+      box-sizing: border-box;
       &.lazy-active {
         animation-name: lazy-fade-in;
         animation-duration: 3s;
